# libdatachannel-java

./: .gitignore  .gitmodules  README.md  build.gradle.kts  index.js  settings.gradle.kts  test.css  test.html  test.js
.github/workflows/: gradle.yml
arch-detect/: build.gradle.kts
arch-detect/src/main/java/tel/schich/libdatachannel/: LibDataChannelArchDetect.java
conventions/src/main/kotlin/: tel.schich.libdatachannel.convention.common.gradle.kts
example/java/: build.gradle.kts  settings.gradle.kts
example/java/src/main/java/tel/schich/libdatachannel/example/: Main.java
example/java/src/main/resources/: logback.xml
example/web/: index.css  index.html  test.css  test.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  conanfile.py  conanfile.txt  linux-arm64.ini  linux-x64.ini
jni/jdk/windows/: jni_md.h
jni/src/: callback.c  callback.h  global_jvm.h  init.c  native.c  native_callback.c  native_callback.h  native_channel.c  native_peer.c  native_track.c  util.c  util.h
src/main/java/tel/schich/libdatachannel/: CandidatePair.java  DataChannel.java  DataChannelCallback.java  DataChannelCallbacks.java  DataChannelInitSettings.java  DataChannelReliability.java  DataChannelState.java  EventListenerContainer.java  GatheringState.java  IceState.java  JNAUtil.java  LibDataChannel.java  LibDataChannelNative.java  LibDataChannelNativeCallback.java  LogLevel.java  Main.java  Main2.java  NativeOperationException.java  PeerCallbacks.java  PeerConnection.java  PeerConnectionCallback.java  PeerConnectionConfiguratino.java  PeerConnectionConfiguration.java  PeerConnectionListener.java  PeerState.java  Platform.java  RTCConfiguration.java  RTCDataChannel.java  RTCPeerConnection.java  SessionDescriptionType.java  SignalingState.java  Track.java  TrackInit.java  Util.java  package-info.java
src/main/java/tel/schich/libdatachannel/exception/: FailureException.java  InvalidException.java  LibDataChannelException.java  NativeOperationException.java  NotAvailableException.java  TooSmallException.java  UnknownFailureException.java
src/main/java/tel/schich/libdatachannel/util/: JNAUtil.java  Util.java
src/test/java/: Main.java
